--- a/Lessons/05_Lab_DataVisualization.Rmd
+++ b/Lessons/05_Lab_DataVisualization.Rmd
@@ -25,7 +25,6 @@ ggplot(data=data.frame(x=0,y=0))+
   geom_text(x=0,y=0.025,label=expression(paste("Mean is ", mu,",", R^{2},'=0.6')))
 print(Plot_text)
 
-ggsave("./Output/Plot_text.jpg",Plot_text, height = 4, width = 6, units = "in", dpi = 300)
 
 ```
 
@@ -60,6 +59,11 @@ Exercise: build your own scatterplots of PeterPaul.chem.nutrients
 # Color your points by year, and facet by lake in two rows.
 # Change the ylab name
 
+ggplot(subset(PeterPaul.chem.nutrients, depth == 0),
+       aes(x = daynum, y = temperature_C, color = as.factor(year4)))+
+  geom_point()+
+  facet_wrap(vars(lakename), nrow = 2)+
+  labs(y = "Temperature C") 
 
 #2. 
 # Plot temperature by date. Color your points by depth.
@@ -67,8 +71,13 @@ Exercise: build your own scatterplots of PeterPaul.chem.nutrients
 # Change the color palette to magma and play with direction (+- 1), which one makes more sense?
 # Change x axis to include marker/labels every 5 years
 
-
-
+ggplot(PeterPaul.chem.nutrients, aes(x = daynum, y = temperature_C, color = depth))+
+  geom_point(size = 0.5)+
+  ylab("Temperature C")+
+  scale_color_viridis(option = "magma", direction = -1)+
+  scale_x_date(
+    date_breaks = "5 years", date_labels = "%Y")
+  
 
 ```
 ## Plotting the relationship between two continuous variables: Scatterplot
@@ -82,7 +91,10 @@ Exercise: Plot relationships between air quality measurements
 # Make the points 50 % transparent
 # Add a line of best fit for the linear regression of these variables.
 
-
+ggplot(EPAair, aes(x = PM2.5, y = Ozone, color = meanLat))+
+  geom_point(alpha = 0.5)+
+  geom_smooth(method = lm)+
+  ylab(expression("0"[3]+ "AQI Value"))
 
 
 ```
