--- a/Assignments/A05_DataVisualization.Rmd
+++ b/Assignments/A05_DataVisualization.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 5: Data Visualization"
-author: "Student Name"
+author: "Jackie Van Der Hout"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -33,16 +33,27 @@ the processed data file for the Niwot Ridge litter dataset (use the [`NEON_NIWO_
 
 ```{r}
 #1 
+getwd()
+library(tidyverse)
+library(cowplot)
+NTL_LTER <- read.csv("../Data/Processed/NTL-LTER_Lake_Chemistry_Nutrients_PeterPaul_Processed.csv", stringsAsFactors = TRUE)
+NEON_LITTER <- read.csv("../Data/Processed/NEON_NIWO_Litter_mass_trap_Processed.csv", stringsAsFactors = TRUE)
 
-#2 
-
+#2
+class(NTL_LTER$sampledate)
+NTL_LTER$sampledate <- as.Date(NTL_LTER$sampledate, format = "%Y-%m-%d")
+class(NEON_LITTER$collectDate)
+NEON_LITTER$collectDate <- as.Date(NEON_LITTER$collectDate, format = "%Y-%m-%d")
 ```
 ## Define your theme
 3. Build a theme and set it as your default theme.
 
 ```{r}
 #3
-
+mytheme <- theme_light(base_size = 13) +
+  theme(axis.text = element_text(color = "black"), 
+        legend.position = "top")
+theme_set(mytheme)
 ```
 
 ## Create graphs
@@ -52,20 +63,66 @@ For numbers 4-7, create ggplot graphs and adjust aesthetics to follow best pract
 
 ```{r}
 #4
-
+tp_ugXpo4 <- ggplot(NTL_LTER, aes(x = po4, y = tp_ug, color = lakename))+
+  geom_point(alpha = 0.5)+
+  labs(x = "Total Phosphate", y = "Total Phospohorous", title = "Phosophorous and Phosphate in Peter and Paul Lakes", color = "Lake")+
+  xlim(0,50)+
+  ylim(0, 150)+
+  geom_smooth(method = lm, color = "black", se = FALSE)+
+  theme(legend.position = "right", 
+        legend.text = element_text(size = 12), legend.title = element_text(size = 12))
+tp_ugXpo4
 ```
 
 
 5. [NTL-LTER] Make three separate boxplots of (a) temperature, (b) TP, and (c) TN, with month as the x axis and lake as a color aesthetic. Then, create a cowplot that combines the three graphs. Make sure that only one legend is present and that graph axes are aligned.
 
-```{r}
+```{r, fig.height = 7, fig.width = 6}
 #5
+library(gridGraphics)
 
+NTL_LTER$month <- as.factor(NTL_LTER$month)
+class(NTL_LTER$month)
+
+tempbox <-ggplot(NTL_LTER, aes(x = month, y = temperature_C, color = lakename)) +
+  geom_boxplot()+
+  labs(x = "Month", y = "Temperature", color = "Lake")+
+  theme(legend.position = "none")
+tempbox   
+
+TPbox <- ggplot(NTL_LTER, aes(x = month, y = tp_ug, color = lakename)) +
+  geom_boxplot()+
+  labs(x = "Month", y = "Total Phosphorous", color = "Lake")+
+  theme(legend.position = "none")
+TPbox
+
+TNbox <- ggplot(NTL_LTER, aes(x = month, y = tn_ug, color = lakename)) +
+  geom_boxplot()+
+  labs(x = "Month", y = "Total Nitrogen", color = "Lake")+
+  theme(legend.position = "none")
+TNbox   
+
+boxes <- plot_grid(
+  tempbox + theme(legend.position = "none"),
+  TPbox + theme(legend.position = "none"),
+  TNbox + theme(legend.position = "none"),
+  align = 'vh',
+  hjust = -1,
+  nrow = 1
+)
+
+fakelegend <- get_legend(tempbox +
+  theme(legend.position = "right", legend.box.margin = margin(0, 0, 0, 1))
+  )
+
+plot_grid(boxes, fakelegend, ncol = 2, rel_widths = c(3, .4))
+#this seems like a clunky way to do it but it more or less works
+#however the output plot only looks good when expanded to full size 
 ```
 
 Question: What do you observe about the variables of interest over seasons and between lakes? 
 
-> Answer: 
+> Answer: Temperature has a wider range of variability than Phosphorous and Nitrogen, and is also the most sensitive to seasonal changes in both lakes. Both Peter and Paul lakes appear to display similar seasonal changes in temperature, with similar standard error ranges. However, Paul Lake seems to display a slightly higher mean temperature than Peter Lake until October, when Peter lake cools down more slowly. Inversely, Peter Lake appears to have a higher concentration of both Phosphorous and Nitrogen on average, as well as higher outlier peak values in nutrient concentration than Paul Lake. Nutrient concentrations appear to be seasonally highest in both lakes and in both nutrient categories during the late summer / early fall. 
 
 6. [Niwot Ridge] Plot a subset of the litter dataset by displaying only the "Needles" functional group. Plot the dry mass of needle litter by date and separate by NLCD class with a color aesthetic. (no need to adjust the name of each land use)
 
@@ -73,11 +130,23 @@ Question: What do you observe about the variables of interest over seasons and b
 
 ```{r}
 #6
+needleplot <- ggplot(subset(NEON_LITTER, functionalGroup == "Needles"), aes(x = collectDate, y = dryMass, color = nlcdClass))+
+  geom_point()+
+  labs(x = "Date", y = "Litter Dry Mass", color = "Land Cover Type")+
+  theme(legend.position = "right")
+needleplot
 
 #7
+NEON_LITTER$nlcdClass <- factor(NEON_LITTER$nlcdClass, levels = c("evergreenForest", "grasslandHerbaceous", "shrubScrub"), 
+                  labels = c("Evergreen Forest", "Herbacious Grassland", "Shrublands"))
 
-
+needleplot2 <- ggplot(subset(NEON_LITTER, functionalGroup == "Needles"), aes(x = collectDate, y = dryMass))+
+  geom_point()+
+  labs(x = "Date", y = "Litter Dry Mass")+
+  theme(legend.position = "right")+
+  facet_wrap(vars(nlcdClass), nrow = 1)
+needleplot2
 ```
 Question: Which of these plots (6 vs. 7) do you think is more effective, and why? 
 
-> Answer:
+> Answer: The facet wrapped plot in #7 provides an easier comparison of litter dry mass over both land cover type and time because of the side-by-side comparison with the same axes, instead of having all of the datapoints within one plot. 
