--- a/Lessons/06_Part1_GLMs.Rmd
+++ b/Lessons/06_Part1_GLMs.Rmd
@@ -38,7 +38,7 @@ If multiple explanatory variables are chosen, they may be analyzed with respect 
 The GLM is based on the assumption that the data residuals approximate a normal distribution (or a linearly transformed normal distribution). We will discuss the non-parametric analogues to several of these tests if the assumptions of normality are violated. For tests that analyze categorical explanatory variables, the assumption is that the variance in the response variable is equal among groups. Note: environmental data often violate the assumptions of normality and equal variance, and we will often proceed with a GLM even if these assumptions are violated. In this situation, justifying the decision to proceed with a linear model must be made.
 
 The GLMs are used for hypothesis testing. 
-If pv-value is equal to or less than set number, reject null hypothesis. If p-value is greater, do not reject null hypothesis. 
+If pv-value is equal to or less than set number, reject null hypothesis. If p-value is greater, do not reject null hypothesis. Use the p-value in the f-statistics line. 
 
 ## Set up
 ```{r, message = FALSE}
@@ -59,7 +59,9 @@ theme_set(mytheme)
 A linear regression is comprised of a continuous response variable, plus a combination of 1+ continuous response variables (plus the error term). The deterministic portion of the equation describes the response variable as lying on a straight line, with an intercept and a slope term. The equation is thus a typical algebraic expression: 
 $$ y = \alpha + \beta*x + \epsilon $$
 
-The goal for the linear regression is to find a **line of best fit**, which is the line drawn through the bivariate space that minimizes the total distance of points from the line. This is also called a "least squares" regression. The remainder of the variance not explained by the model is called the **residual error.** 
+The goal for the linear regression is to find a **line of best fit**, which is the line drawn through the bivariate space that minimizes the total distance of points from the line. This is also called a "least squares" regression. The remainder of the variance not explained by the model is called the **residual error.** We want the residual series to follow a normal distribution and to have a mean 0 (on average we are looking for residuals to be 0 when running a linear regression). 
+
+**P-values** one p-value from each coefficient and one p-value overall. 
 
 The linear regression will test the null hypotheses that
 
@@ -68,7 +70,11 @@ The linear regression will test the null hypotheses that
 
 Whether or not we care about the result of each of these tested hypotheses will depend on our research question. Sometimes, the test for the intercept will be of interest, and sometimes it will not.
 
-Important components of the linear regression are the correlation and the R-squared value. The **correlation** is a number between -1 and 1, describing the relationship between the variables. Correlations close to -1 represent strong negative correlations, correlations close to zero represent weak correlations, and correlations close to 1 represent strong positive correlations. The **R-squared value** is the correlation squared, becoming a number between 0 and 1. The R-squared value describes the percent of variance accounted for by the explanatory variables. 
+Important components of the linear regression are the correlation and the R-squared value. The **correlation** is a number between -1 and 1, describing the relationship between the variables. Correlations close to -1 represent strong negative correlations, correlations close to zero represent weak correlations, and correlations close to 1 represent strong positive correlations. The **R-squared value** is the correlation squared, becoming a number between 0 and 1. The R-squared value describes the percent of variance accounted for by the explanatory variables. It tells you how much variability is explained by explanatory variables. Use adjusted R^2 when comparing the use of different variables in a model. 
+
+**Adding Variables**
+The more variables you have the more explanatory power you have. Adding variables also increases complexity and R^2 when the right variables are added.
+Identifying new variables: testing for correlation between variables via a correlation matrix for correlations among all variables in the dataframe. 
 
 ## Simple Linear Regression
 
@@ -87,6 +93,8 @@ summary(irradiance.regression)
 
 # Correlation
 cor.test(PeterPaul.chem.nutrients$irradianceWater, PeterPaul.chem.nutrients$depth)
+#You want to the mean of the error term to be zero to show you have a good linear regression
+#you want R^2 to be as close to 1 as possible for highest explanatory power of the variables
 #negative strong correlation
 ```
 Question: How would you report the results of this test (overall findings and report of statistical output)?
@@ -196,9 +204,11 @@ corrplot.mixed(PeterPaulCorr, upper = "ellipse") #plot shows viz and values for 
 
 ## AIC to select variables
 
-However, it is possible to over-parameterize a linear model. Adding additional explanatory variables takes away degrees of freedom, and if explanatory variables co-vary the interpretation can become overly complicated. Remember, an ideal statistical model balances simplicity and explanatory power! To help with this tradeoff, we can use the **Akaike's Information Criterion (AIC)** to compute a stepwise regression that either adds explanatory variables from the bottom up or removes explanatory variables from a full set of suggested options. The smaller the AIC value, the better. 
+However, it is possible to over-parameterize a linear model. Adding additional explanatory variables takes away degrees of freedom, and if explanatory variables co-vary the interpretation can become overly complicated. Remember, an ideal statistical model balances simplicity and explanatory power! To help with this tradeoff, we can use the **Akaike's Information Criterion (AIC)** to compute a stepwise regression that either adds explanatory variables from the bottom up or removes explanatory variables from a full set of suggested options. The smaller the AIC value, the better. The stepwise algorithm checks all possible combinations of variables based on AIC to find the regression with the best fit. It is useful only when trying to figure out which variables to add in model selection, but not used after that to evaluate the model. 
 
 Let's say we want to know which explanatory variables will allow us to best predict total phosphorus concentrations. Potential explanatory variables from the dataset could include depth, dissolved oxygen, temperature, PAR, total N concentration, and phosphate concentration.
+
+When removing variables, reduction in AIC means variables can be removed from the model. If the AIC increases when a variable is removed, keep that variable! The algorithm will re-do the analysis with each one of the variable combinations. The best linear regression is the one with the lowest AIC. However you don't want two variables with high correlation in the same model, it can lead to overfitting. 
 
 ```{r}
 Paul.naomit <- PeterPaul.chem.nutrients %>%
